# coop

./: .gitignore  .gitmodules  CMakeLists.txt  README
include/: class.h  oobject.h  ostring.h  otypes.h
src/: CMakeLists.txt  class.c
src/utils/: CMakeLists.txt  oobject.c  ostring.c
tests/: CMakeLists.txt  cstring.c  cstring.h  main.c  string.c  test.lds
